<resources>
    <string name="app_name">Thermomètre</string>
    <string name="action_settings">Paramètres</string>
    <string name="drawer_open">ouvrir</string>
    <string name="drawer_close">fermer</string>
    <string name="drawer_list">Liste</string>
    <string name="drawer_chart">Graphique</string>
    <string name="drawer_settings">Paramètres</string>
    <string name="house">Votre maison</string>
    <string name="degree">°C</string>
    <string name="temperature">Température</string>
    <string name="percent">%</string>
    <string name="humidity">Humidité</string>
    <string name="drawer_bg_desc">Drawer header fond</string>
    <string name="bref">En Bref</string>
    <string name="history">Histoire</string>
    <string name="specifications">Caractéristiques</string>
    <string name="description_peugeot">peugeot photo</string>
    <string name="add">ajouter</string>
    <string name="cancel">annuler</string>
    <string name="tryagain">Réessayer</string>
    <string name="smt_wrong_happened">Une erreur est survenue</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_color_summary">Couleur de la barre de navigation et la bar de status</string>
    <string name="pref_color_title">Changer la couleur</string>
    <string name="pref_temp_title">Temperature</string>
    <string name="pref_temp_summary">Display temperature values</string>
    <string name="pref_hum_title">Humidity</string>
    <string name="pref_hum_summary">Display humidity values</string>
    <string name="language">Langue</string>
</resources>
