<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="pref_sync_temp"
        android:title="@string/pref_temp_title"
        android:summary="@string/pref_temp_summary"
        android:defaultValue="true" />
    <SwitchPreference
        android:key="pref_sync_hum"
        android:title="@string/pref_hum_title"
        android:summary="@string/pref_hum_summary"
        android:defaultValue="true" />
    <com.mathildeguillossou.weathersensor.view.MyListPreference
        android:key="pref_syncConnectionType"
        android:title="@string/language"
        android:summary="%s"
        android:entries="@array/pref_language_entries"
        android:entryValues="@array/pref_language_alias_entries" />
    <com.github.danielnilsson9.colorpickerview.preference.ColorPreference
        android:key="pref_sync_color"
        android:defaultValue="@color/colorPrimaryDark"
        android:summary="@string/pref_color_summary"
        android:title="@string/pref_color_title" />
    <EditTextPreference
        android:key="pref_sync_uri"
        android:title="@string/pref_uri_title"
        android:dialogTitle="@string/pref_uri_title"
        android:dialogMessage="@string/pref_uri_dialog_message"
        />
</PreferenceScreen>